CE-173 oap-maven: maven -> gradle